<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">小雪机器人</string>
    <string name="title">输入IP地址</string>
    <string name="title_activity_family_fun">FamilyFunActivity</string>
    <string name="head_name">空气净化器</string>
    <string name="air_rent">空气指数</string>
    <string name="temp">温度</string>
    <string name="initial_temperature">33</string>
    <string name="degrees_celsius">℃</string>
    <string name="humidity">湿度</string>
    <string name="initial_humidity">45</string>
    <string name="percent_sign">%</string>
    <string name="define_situtation">点击添加自动开启情景</string>
    <string name="wind_speed_adjustment">风速调节</string>
    <string name="timed_shutdown">定时关机</string>
    <string name="title_activity_video_play">VideoPlayActivity</string>
    <string name="title_activity_patrol_set">PatrolSetActivity</string>
    <string name="snowbot_home">请确认这里是否是小雪的家？</string>
    <string name="snowbot_outware">请填写小雪相关信息，准备出库</string>
    <string name="snowbot_already_outware">已完成出库，请稍后，小雪稍后会自动重启</string>
    <string name="snowbot_restart">请选择一个无线网络进行配置</string>
    <string name="snowbot_registration">请输入主人手机号，注册主人信息。</string>
    <string name="snowbot_name">请给小雪请个名字吧。</string>
    <string name="snowbot_appDownload">请扫描二维码，下载手机app。</string>
    <string name="out_ware_hint">请点击出库按钮进行出库,当按钮显示为出库完成时,说明已经完成出库</string>
    <string name="non_out_ware">出库</string>
    <string name="alreadly_out_ware">完成出库</string>
    <string name="robot_params_read">读取</string>
    <string name="robot_params_ok">确定</string>
    <string name="robot_params_up_computer">上位机</string>
    <string name="robot_params_up_plate">上身板</string>
    <string name="robot_params_down_plate">下身板</string>
    <string name="robot_params_navigation">导航核心板</string>
    <string name="sn_not_null">机器人唯一识别码SN不能为空</string>
    <string name="up_computer_not_null">上位机内容不能为空</string>
    <string name="up_plate_not_null">上身板内容不能为空</string>
    <string name="down_plate_not_null">下身板内容不能为空</string>
    <string name="navigation_not_null">导航核心板内容不能为空</string>
    <string name="robot_home">给小雪安个家吧,这里是否是小雪的家(充电的位置)？</string>
    <string name="no">否</string>
    <string name="yes">是,下一步</string>
    <string name="skip">跳过注册</string>
    <string name="sn_see_qr">查看二维码</string>
    <string name="reboot_robot">请把小雪推到充电的地方，点击重启，重新启动小雪</string>
    <string name="reboot">重启</string>
    <string name="master_num">主人手机号码</string>
    <string name="verify_num">收到的验证码</string>
    <string name="set_password">设置密码</string>
    <string name="input_num_character">0123456789abcdefghigklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="set_nickname">主人昵称</string>
    <string name="get_berify_num">获取</string>
    <string name="check_phone_num">获取验证码失败,请检查手机号码是否填写正确</string>
    <string name="check_phone_num_fail">获取验证码失败,请重新获取</string>
    <string name="set_robot_nickname">给小雪起个名字吧</string>
    <string name="robot_nickname_empty">小雪名字不能为空</string>
    <string name="scan_qrcode">扫描二维码下载手机app</string>
    <string name="complete">完成</string>
    <string name="master_num_empaty">主人手机号码不能为空</string>
    <string name="verify_num_empaty">验证码不能为空</string>
    <string name="psd_num_empaty">密码不能为空</string>
    <string name="psd_num_style">密码长度应为4-12位</string>
    <string name="nickname_empaty">主人昵称不能为空</string>
    <string name="save_map">保存地图</string>
    <string name="add_home">添加房间</string>
    <string name="delete_home">删除房间</string>
    <string name="patrol">一键巡逻</string>
    <string name="go_home">回去充电</string>
    <string name="start_add_home">开始添加房间</string>
    <string name="cancle_add_home">取消添加房间</string>
    <string name="add_wall">添加虚拟墙</string>
    <string name="del_wall">删除虚拟墙</string>
    <string name="clear_map">清除地图</string>
    <string name="complete_btn">完成</string>
    <string name="max_home">最多可设置十个房间</string>
    <string name="out_home">点击区域已超出地图</string>
    <string name="home_empty">当前房间为空</string>
    <string name="home_name_duplicate">房间名重复，请修改</string>
    <string name="choose_right_home">请在地图范围内,选择正确的房间点</string>
    <string name="input_rome_name">请输入房间名称</string>
    <string name="dialog_hit">提示</string>
    <string name="cancle">取消</string>
    <string name="sure">确认添加</string>
    <string name="make_sure">确认</string>
    <string name="roome_name_empty">房间名称不能为空,请重新输入</string>
    <string name="start_go_home">开始前往房间:</string>
    <string name="start_patrol">开始巡逻,一共%1$d个巡逻点</string>
    <string name="start_add_wall">开始添加虚拟墙</string>
    <string name="cancle_add_wall">取消添加虚拟墙</string>
    <string name="one_step">第一步</string>
    <string name="two_step">第二步</string>
    <string name="thr_step">第三步</string>
    <string name="four_step">第四步</string>
    <string name="five_step">第五步</string>
    <string name="map_empty">当前室内地图为空,无法进行该操作</string>
    <string name="update_title">版本更新</string>
    <string name="update_sure">更新</string>
    <string name="update_message">有新版本可更新，请更新</string>
    <string name="patrol_point">无巡逻点,请添加巡逻点</string>
    <string name="name">姓名:</string>
    <string name="age">年龄:</string>
    <string name="sex">性别:</string>
    <string name="appearance">颜值:</string>
    <string name="smile">笑容:</string>
    <string name="detection_again">重新检测</string>
    <string name="input_name">请输入名字</string>
    <string name="input_group">请输入所属单位名称</string>
    <string name="ensure">确定</string>
    <string name="start_registration">开始注册</string>
    <string name="start_identify">开始识别</string>
    <string name="detection_fail">识别失败</string>
    <string name="detection_suc">识别成功</string>
    <string name="register_suc">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="identify_suc">检索成功</string>
    <string name="identify_fail">检索失败</string>
    <string name="identify_cancel">取消</string>
    <string name="restore_map">检测到有备份地图，是否需要还原?</string>
    <string name="map_set">地图设置</string>
    <string name="video_call">视频通话</string>
    <string name="video_record">录像</string>
    <string name="face_recognition">人脸识别</string>
    <string name="point_patrol">定点巡逻</string>
    <string name="advertisement">广告</string>
    <string name="photo_album">相册</string>
    <string name="family_education">家庭教育</string>
    <string name="wise_family">智慧家庭</string>
    <string name="snowbot_dance">舞蹈</string>
    <string name="setting">设置</string>
    <string name="owner">我的主人是</string>
    <string name="face_recognition_open">人脸识别开启</string>
    <string name="touch_head_patrol">触摸头部进行巡逻</string>
    <string name="touch_head_weather">触摸头部播报天气预报</string>
    <string name="volume">音量</string>
    <string name="brightness">亮度</string>
    <string name="getting">获取中</string>
    <string name="call_settings">通话设置</string>
    <string name="advanced_options">高级选项</string>
    <string name="map_restore">地图恢复</string>
    <string name="custom_questions_answers">自定义语音问答</string>
    <string name="custom_advertisement">自定义广告语</string>
    <string name="about">关于</string>
    <string name="shut_down">关机</string>
    <string name="clear_data">清除数据</string>
    <string name="shut_down_hint">执行此操作将会关闭系统,确定关机吗？</string>
    <string name="reboot_hint">执行此操作将会重启系统,确定重启吗？</string>
    <string name="clear_data_hint">执行此操作将会删除应用本地数据,确定删除吗？</string>
    <string name="psd_error">密码错误,请重新输入</string>
    <string name="delete_succeeded">删除成功</string>
    <string name="delete_failed">删除失败</string>
    <string name="date">2016-08-26</string>
    <string name="left_arm">左臂摆动</string>
    <string name="right_arm">右臂摆动</string>
    <string name="double_arm">双臂摆动</string>
    <string name="turn_on_air_cleaner">净化器开机</string>
    <string name="turn_off_air_cleaner">净化器关机</string>
    <string name="open_sensor">开启传感器</string>
    <string name="close_sensor">关闭传感器</string>
    <string name="require_send">传感器数据请求发送</string>
    <string name="require_send_all">传感器数据请求发送 ALL</string>
    <string name="snowbot_SN">获取机器人SN</string>
    <string name="start_mic">开启麦克风</string>
    <string name="power_state">获取电量和状态</string>
    <string name="reset">Reset</string>
    <string name="change_expression">脸部表情切换</string>
    <string name="setwifi">请设置WIFI</string>
    <string name="ssid">ssid</string>
    <string name="wifi_password">请输入WIFI密码</string>
    <string name="wifi">无线网络</string>
    <string name="TP_LINK_YF">TP_LINK_YF</string>
    <string name="try_to_request">努力请求中...</string>
    <string name="aiui_network">AIUI网络</string>
    <string name="no_map_data">暂无地图数据</string>
    <string name="regeneration">恢复</string>
    <string name="ad_content">请输入广告内容</string>
    <string name="unlimited_repeat">无限重复</string>
    <string name="submit">提交</string>
    <string name="repeat_count">重复次数</string>
    <string name="speech_empty">暂无自定义语音,请添加</string>
    <string name="custom_issues">请输入自定义问题</string>
    <string name="custom_answer">请输入自定义答案</string>
    <string name="delete">删除</string>
    <string name="question_empty">问题不能为空</string>
    <string name="answer_empty">答案不能为空</string>
    <string name="saturation">饱和度</string>
    <string name="hue">色  调</string>
    <string name="transparency">透明度</string>
    <string name="question">问 ：  </string>
    <string name="answer">答 ：  </string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="back">返回</string>
    <string name="speech_snowBot">Speech  SnowBot</string>
    <string name="arrow">></string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="point">.</string>
    <string name="division">÷</string>
    <string name="multiplication">×</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="clear">C</string>
    <string name="equals_sign">=</string>
    <string name="accessories">辅料</string>
    <string name="main_ingredient">主料</string>
    <string name="steps">步骤</string>
    <string name="wind_direction_speed">风向风速 ： </string>
    <string name="relative_humidity">相对湿度 ： </string>
    <string name="air_quality">空气质量 ：</string>
    <string name="travel_advice">出行建议 ： </string>
    <string name="error_drm_not_supported">保护内容不受支持的API级别低于18</string>
    <string name="error_drm_unsupported_scheme">这个设备不支持所需的数字版权管理方案</string>
    <string name="error_drm_unknown">一个未知的DRM错误发生</string>
    <string name="error_no_decoder">这个设备不提供一个译码器 <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_secure_decoder">这个设备不提供一个安全的解码器 <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_querying_decoders">无法查询设备解码器</string>
    <string name="error_instantiating_decoder">不能实例化译码器 <xliff:g id="decoder_name">%1$s</xliff:g></string>
    <string name="storage_permission_denied">权限访问存储被拒绝</string>
    <string name="snowbot_name_text">小雪人名字</string>
    <string name="name_text">小红</string>
    <string name="software_version">软件版本</string>
    <string name="system_version">系统版本</string>
    <string name="hardware_version">硬件版本</string>
    <string name="serial_number">序列号</string>
    <string name="snow_face_color">小雪脸的颜色</string>
    <string name="mac_address">MAC地址</string>
    <string name="audio_module">音频模块</string>
    <string name="learn_the_ropes">摸头动作</string>
    <string name="check_for_updates">检查更新</string>
    <string name="modify_sn_params">修改SN参数</string>
    <string name="custom_file_copy">批量导入自定义语义</string>
    <string name="update_params_success">机器人参数更新成功</string>
    <string name="login">Login</string>
    <string name="join_button_text">Join Own Room</string>
    <string name="join_dialog_title">Join My own room</string>
    <string name="snowbot_name1">小雪</string>
</resources>