<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.csjbot.snowbot.activity.settings.SettingsTestActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="swingDoubleArm"
            android:text="@string/double_arm" />


        <Button
            android:id="@+id/btnTurnOnAirCleaner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="turnOnAirCon"
            android:text="@string/turn_on_air_cleaner" />

        <Button
            android:id="@+id/btnTurnOffAirCleaner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="turnOffAirCon"
            android:text="@string/turn_off_air_cleaner" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sendSensorAll"
            android:text="@string/require_send_all" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="changeExpression"
            android:text="@string/change_expression" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</LinearLayout>
